src/objects/AcetLinkStaticResponse__mdt.object
<CustomObject>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDowntime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDowntime</label>
        <type>Checkbox</type>
    </fields>
    <label>AcetLinkStaticResponse</label>
    <pluralLabel>AcetLinkStaticResponses</pluralLabel>
</CustomObject>